<resources>
    <string name="app_name">Sis Restaurente Adm</string>
    <string name="title_activity_abertura">Caixa</string>
    <string name="title_activity_pedidos">Pedidos</string>
    <string name="title_activity_escolher_mesa">Caixa</string>
    <string name="sub_title_recuperar">Recuperar senha</string>
    <string name="title_activity_escolher_contas">Caixa</string>
    <string name="title_activity_detalhe_item">Detalhe Item</string>
    <string name="title_activity_relatorio">Relatório de vendas</string>
    <string name="title_activity_cadastro_cupom">Cadastro Cupom</string>
    <string name="title_activity_catastro_item">Cadastro de Item</string>
    <string name="title_activity_usuario">Configuração de Usuário</string>
    <string name="title_activity_horario_especial">Horario Especial</string>
    <string name="title_activity_quantidade_mesa">Quantidade de Mesas</string>
    <string name="title_activity_cadastros_horarios">Cadastro Horários</string>
    <string name="title_activity_gerenciamento_cupom">Gerenciamento Cupom</string>
    <string name="title_activity_gerenciador_cardapio">Gerenciar o Cardápio</string>
    <string name="title_activity_reserva_configuracao">Configuração da Reserva</string>
    <string name="title_activity_pagamento_concluido">Pagamento Concluido</string>
    <string name="title_activity_relatorio_uso_cupons">Relatório de Uso dos Cupons</string>
    <string name="title_activity_abertura_fechamento_caixa">Abertura e Fechamento Caixa</string>
    <string name="moeda">R$:</string>
    <string name="campo_mesa">Mesa</string>
    <string name="campo_nome">Nome</string>
    <string name="campo_hora">Hora</string>
    <string name="campo_nome_">Nome:</string>
    <string name="campo_senha">Senha</string>
    <string name="campo_preco">Preço</string>
    <string name="total_itens">Itens:</string>
    <string name="campo_email">E-mail</string>
    <string name="campo_abertura">Abertura</string>
    <string name="campo_status">Disponível</string>
    <string name="campo_status_">Disponível:</string>
    <string name="campo_descricao">Descrição</string>
    <string name="cb_dez_porcento">Tirar 10%</string>
    <string name="campo_hora_fechado">fechado</string>
    <string name="campo_fechamento">Fechamento</string>
    <string name="campo_quantidade_avaliacao">(0)</string>
    <string name="valor_total_com_dez">Total com 10%</string>
    <string name="valor_total_sem_dez">Total sem 10%</string>
    <string name="campo_mesa_reserva">Número de mesas</string>
    <string name="campo_dias_vendas">Exemplo: 1 a 365</string>
    <string name="campo_spinner">Escolha uma categoria</string>
    <string name="campo_pessoa_reserva">Pessoas por mesa</string>
    <string name="campo_numero_pedido">Número de pedidos:</string>
    <string name="campo_item_mais_pedido">Item mais pedido:</string>
    <string name="campo_item_menos_pedido">Item menos pedido:</string>
    <string name="campo_mais_pedido">Quantidade do mais pedido:</string>
    <string name="campo_somatorio_preco_venda">Somatorio Preço:</string>
    <string name="caixa_codigo_ok">Desconto Aplicado com sucesso</string>
    <string name="campo_menos_pedido">Quantidade do menos pedido:</string>
    <string name="campo_registro_mesa_atual">Quantidade de mesas atual:</string>
    <string name="campo_numero_de_dias_para_relatorio">Digite o número de dias que deseja o relatório</string>
    <string name="bt_caixa">Caixa</string>
    <string name="button_gerar">Gerar</string>
    <string name="button_entrar">Entrar</string>
    <string name="button_salvar">Salvar</string>
    <string name="button_continuar">Continuar</string>
    <string name="button_menu_pedidos">Pedidos</string>
    <string name="bt_caixa_fechar">Fechar Caixa</string>
    <string name="button_recuperarsenha">Recuperar senha</string>
    <string name="button_fazer_pagamento">Fazer Pagamento</string>
    <string name="caixa_bt_voltar">Voltar para tela inicial</string>
    <string name="button_menu_cardapio">Gerencia o cardapio</string>
    <string name="button_cadastra_item">Cadastrar novo item</string>
    <string name="button_adicinar_horario">Adicionar Horário</string>
    <string name="button_seleciona_imagem">Selecione uma imagem</string>
    <string name="button_textview_recuperarsenha">Esqueci minha senha</string>
    <string name="erro_login">Erro ao logar</string>
    <string name="erro_reset">Erro ao Resetar</string>
    <string name="erro_cpf_vazio">Informe o CPF</string>
    <string name="erro_cpf_invalido">CPF Invalido</string>
    <string name="erro_pedido">Item com Erro, ID:</string>
    <string name="erro_data_vazia">Preencha a data</string>
    <string name="erro_sem_numero">Digite um número</string>
    <string name="erro_nome_branco">Preencha o nome</string>
    <string name="erro_consultar">Erro ao consultar</string>
    <string name="erro_data_invalida">Data Invalida</string>
    <string name="erro_email_vazio">Digite seu e-mail</string>
    <string name="erro_preco_branco"> Preencha o preço</string>
    <string name="erro_email_invalido">E-mail inválido</string>
    <string name="erro_senha_errado">Senha está errada</string>
    <string name="erro_data_incompleta">Data incompleta</string>
    <string name="erro_tente_novamente">Tente novamente</string>
    <string name="erro_campo_mesa_invalida">Mesa invalida</string>
    <string name="erro_deletar_filme">Erro ao deletar item</string>
    <string name="erro_sem_registro_cpf">CPF não cadastrado</string>
    <string name="erro_ao_salvar_item">Erro ao salvar o item</string>
    <string name="erro_link_foto">Erro ao obter link da foto</string>
    <string name="erro_nivel_usuario">Usuário não autorizado</string>
    <string name="erro_caixa_abertura_vazio">Digite um valor</string>
    <string name="erro_baixar_imagem">Erro ao baixar a imagem</string>
    <string name="erro_descricao_branco">Preencha a descrição</string>
    <string name="erro_item_relatorio">Houve item com problema</string>
    <string name="erro_email_nao_cadastrado">E-mail não cadastrado</string>
    <string name="erro_horarios_iguais">Selecione horários diferentes</string>
    <string name="erro_upload_foto">Erro no upload da foto ao servidor</string>
    <string name="erro_deletar_foto">Falha ao deletar foto do servidor</string>
    <string name="erro_ao_atualizar_item">Erro ao tentar atualizar item</string>
    <string name="erro_sem_imagem">Selecione uma imagem antes de salvar</string>
    <string name="erro_campo_vazio">E-mail ou senha não pode estar em branco</string>
    <string name="erro_horario_abertura_vazio">Selecione horário de Abertura</string>
    <string name="erro_ao_parse_preco">Erro ao pegar o preço, tente novamente</string>
    <string name="erro_horario_fechamento_vazio">Selecione horário de Abertura</string>
    <string name="erro_caixa_abertura_aguardando">Caixa aguardando conferencia</string>
    <string name="erro_sem_conexao">Sem Conexão com a internet, tente mais tarde!!</string>
    <string name="erro_caixa_abertura_fechado">Caixa fechado aguardando conferencia</string>
    <string name="erro_consulta_qt_mesa">Erro ao consultar quantidade atual de mesa</string>
    <string name="erro_deletar_categoria_antiga">Erro ao deletar da categoria antiga</string>
    <string name="erro_campo_mesa_vazio">Você deve digitar a mesa antes de continuar</string>
    <string name="erro_caixa_codigo_digitado">Codigo invalido, Desconto não aplicado</string>
    <string name="erro_caixa_sem_selecionar_usuario">Selecione um cliente para continuar</string>
    <string name="erro_pedido_continuacao">Não foi salvo corretamente, chame o gerente! </string>
    <string name="erro_quantidade_de_dias_invalido">Numero invalido, digite um entre 1 – 365</string>
    <string name="erro_caixa_codigo_expirado">Codigo com limite excedido, Desconto não aplicado</string>
    <string name="erro_caixa_pedido_aberto">Há pedidos em aberto, aguarde a finalização para continuar</string>
    <string name="erro_caixa_codigo_duplicado">Só é permitido usar um código por conta, Desconto não aplicado</string>
    <string name="erro_horario_fechamento_anterios_abertura">Horário de fechamento tem que ser mais tarde que a abertura</string>
    <string name="caixa_valor_troco">Troco R$:</string>
    <string name="aviso_imageView">Imagem do prato</string>
    <string name="caixa_valor_total">Valor pago R$:</string>
    <string name="caixa_bt_abrir_caixa">Abrir Caixa</string>
    <string name="aviso_salvo_sem_foto">Salvo sem foto</string>
    <string name="caixa_cpf_nao">Cliente não identificado</string>
    <string name="avso_imageButton_delete">Deletar horário</string>
    <string name="aviso_sem_pedido">Sem pedidos realizados</string>
    <string name="aviso_foto_antiga">Mantida a foto antiga</string>
    <string name="caixa_fechado">Caixa fechado com sucesso</string>
    <string name="aviso_sucesso_cadastro">Salvo com sucesso</string>
    <string name="caixa_liberado">Caixa liberado com sucesso</string>
    <string name="aviso_update_feito">Atualização finalizada</string>
    <string name="aviso_deletar_sucesso">Deletado com sucesso</string>
    <string name="aviso_sem_horarios">Sem Horários registrados</string>
    <string name="aviso_resetado_sucesso">Resetado com sucesso</string>
    <string name="aviso_sucesso_update">Atualizado com sucesso! </string>
    <string name="aviso_mesa">Digite a mesa informada pelo usuário</string>
    <string name="caixa_Cupom_desconto">Tem um cupom de desconto? </string>
    <string name="caixa_abertura_alerta_aberto">Caixa aberto com sucesso</string>
    <string name="aviso_atualizado_sem_foto">Atualizado, porém, sem foto</string>
    <string name="aviso_recuperado">Senha enviada para o e-mail cadastrado</string>
    <string name="aviso_finalizando_sem_foto">Finalizando cadastro sem foto</string>
    <string name="aviso_sem_item_mais_pedidos">Não existem itens mais pedidos</string>
    <string name="aviso_sem_item_menos_pedidos">Não existem itens menos pedidos</string>
    <string name="caixa_hint_valor_inicial">Digite o valor de abertura de caixa</string>
    <string name="aviso_finalizando_update">Finalizando atualização sem foto nova</string>
    <string name="aviso_sem_item_cadastrado">Não a itens cadastrados nessa categoria</string>
    <string name="aviso_caixa_valor_menor">Valor Digitado, menor que o valor total da conta</string>
    <string name="aviso_sem_codigo_digitado">Você deve digitar um código, Desconto não aplicado</string>
    <string name="caixa_aviso_escolher">Selecione o(s) usuário(s) que deseja fazer o pagamento da conta</string>
    <string name="dialog_button_dialog_sim">Sim</string>
    <string name="dialog_button_dialog_nao">Não</string>
    <string name="dialog_button_cancelar">Cancelar</string>
    <string name="dialog_title_delete">Deletar Item</string>
    <string name="dialog_title_resetar">Resetar Mesa</string>
    <string name="dialog_title_sair_casdastro">Atenção</string>
    <string name="dialog_mensagem_pedido">Deseja mudar para:</string>
    <string name="dialog_title_pedido">Atualização do status</string>
    <string name="dialog_button_configuracao">Abrir Configuração</string>
    <string name="dialog_mensagem_deletar">Deseja realmente deletar</string>
    <string name="dialog_mensagem_cadastro">Deseja sair sem salvar? </string>
    <string name="menu_subPrincipal_vendas">Vendas</string>
    <string name="menu_principal_relatorio">Relatório</string>
    <string name="menu_subPrincipal_reservas">Reservas</string>
    <string name="menu_principal_configuracao">Configuração</string>
    <string name="menu_subPrincipal_usuario">Controle Usuário</string>
    <string name="menu_subPrincipal_qtMesa">Quantidade de mesa</string>
    <string name="menu_subPrincipal_desconto">Cupons de Descontos Usados</string>
    <string name="menu_subPrincipal_horasFuncionamento">Horários de Funcionamento</string>
</resources>